syntax = "proto3";

package goods;
option go_package = "./goods";

message ListGoodsReq {
  string name = 1;
  string types = 2;
  int32 page = 3;
  int32 pageSize = 4;
  int32 quality = 5;
}

message Material {
  int64 id = 1;
  string Name = 2;
  int32 count = 3;
  string image = 4;
}

message Goods {
  int64 id = 1;
  string name = 2;
  string description = 3;
  string image = 4;
  int32 quality = 5;
  int32 workload = 6;
  repeated Material materials = 7;
  string types = 8;
}

message ListGoodsResp {
  int64 code = 1 ;
  string message = 2;
  repeated Goods data = 3;
}

service GoodsServer {
  rpc ListGoods(ListGoodsReq) returns(ListGoodsResp);
}
